[tool.poetry]
name = "anmayithap"
version = "0.1.0"
description = "anmayithap inc. repo, where is my rep+?"
authors = ["anmayithap <ruslan.torbeev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
idna = "3.7"


[tool.poetry.group.dev-lint.dependencies]
mypy = "^1.5.1"
ruff = "^0.1.11"
isort = "^5.13.2"
pre-commit = "^3.6.0"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.

select = [
    "E",
    "F",
    "W",
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "I",   # isort
    "N",   # pep8-naming
    "COM", # flake8-commas
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
]

ignore = [
    "D100", # Missing docstring in public module
    "D104",
    "D107", # Missing docstring in __init__
    "D103",
    "D102",
    "D101",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "venv",
]

per-file-ignores = {}

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.mypy]

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

strict_optional = true

warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

strict_concatenate = true
strict_equality = true
